--- a/project1/project 7/netflix .html
+++ b/project1/project 7/netflix .html
@@ -27,15 +27,15 @@
             <div class="box1"><img
                     src="https://assets.nflxext.com/ffe/siteui/vlv3/56b4aa77-4df4-4f23-8a39-52acc5dc0efa/web_tall_panel/IN-en-20250127-TRIFECTA-perspective_e27c562f-09b3-472c-ab1d-88452e1c69ac_medium.jpg"
                     alt="">
-                    </div>
-                    <div class="box2">
+            </div>
+            <div class="box2">
                 <h1 class="img-h1">Unlimited movies,</h1>
                 <h1 class="img-h1">TV Shows and more</h1>
                 <p>Start at 149.cancal at any time.</p>
             </div>
-            </div>
-
         </div>
+
+    </div>
     </div>
 
     </div>
@@ -48,28 +48,52 @@
             </label>
             <button class="get-start"> Get Started</button>
         </div>
-        <div class="grid">
-            <h2 class="trending">Trending Now</h2>
-            <div class="grid1">
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
-            </div>
+    </div>
+    <div class="grid">
+        <h2 class="trending">Trending Now</h2>
+        <div class="grid1">
+            <ul>
+                <li><a href="#"> <img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABWY2l29_Q4fcWvurVVPaQskEeybW5H-pz0CEcX59H0yDREVUcHOPdlpKjhb-AXYmIFt8ae6097xK17E5IGOUfagQ-SJzJTwRc_lNWC_j0pRPan0IziFLF6c2APQ_i2xlNlvvar-fiNgYE0jhcgFW.webp?r=82c"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABRle22NBlr0-IcROZhzASPWgK_S2e-WAG5jx-Jcp_kzDmdK39dWulrS9eo2KBNYGmVxmKCh2voDOVZo3W9C2d5byh5ezBwfQpE33HkvxiAsQfalj2h-UONU46-SthdlEAlQ3rhcEYmynsJe8Kaca9O3TQQkwOm4_1U5VlDPpW-dc94mMpWUoe2pFsNTYuMjVU9C9Ku8sH35WlaC5.webp?r=127"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABURx9AyfogBvfeXdgb-y2fRt2u3DGsQQBsmMJniLhF2s8UIN9qIZTnpfFJ0wvKLfH3W1D_JBVDYG_571TUksiotC71p6J8deNJ2092AqZBrDcgacxn4-59k4lKEVv6mFW17acE_2jXiBAXeqe7VT.webp?r=a96"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABeGdSjZrwaRTIX5dKk4kuoyFo4HeT78bTXSHRKIHWH8p6udJzm7yEtWn3lnH8YHanF9UUHgFJRcqVztBom_DYMcXonm6OfSg1rDMeiWiViLEGJ63zrcA0gDpG2RiJwkcbAhAMWvp1EOCPiJ3o6Ll6eOsuthgirzMdRCRPvk2yQ.webp?r=c38"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABRY-wtsYJXL1Dlt5SCY7dvBTyFhyqqLU9vjr5nmRX6kWEPG4v-jmJlG4bAdkTjuRKyOa-hkUtDxhBjwGLEJMQG_9pZSRpFLJB18cyDohEV-O_46eJ17q2sfUIUQLeCugqQH840foeRpYNpcGiD5_.webp?r=4a4"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABStwqpFCkuV2Tui63oyvKUVuYpQivfjqPHsGJwB7Hl9kWbGhiCMuwZ_4ZBR2GHWIyr4KWNaBlPgSpkGUT9borXEAPlOC5vOq4fM5XyF96BHPta9ON-rJaAtzuzznLGwBp4tzAysS6kDRP2IDppU31e97GAj66PkthNe5rYj0IN16UURONJCiTduWNZ3nFa8jJOghRBe2y0YcxC_Q.webp?r=e7f"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABZ8QrZracLJpo4RaXRAJKWYdFnZz_CH8qWpE8C-WjRGPMui39MYjmuuxcmVleAqSif-3e0YFbq2UXSeMqMRWCeyC6jIr2Q_Y8FKIluW3uFATpIFWx-LA5jOFi2WorQZcVi4plZmQsD7WjlJXtqOb.webp?r=b2c"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABQfTR9ggKr_yneE96F2LRSSaYzu-ne7D4-7leDpB8OuR6R4aRXZEH5u4zqRI_punAQRv-0K0EWAbuNu4i5BkMYllg1RyFbPvZKS0nO3e-0Z5IoCjHodBgjREWONI-RPGNB4p_hhLCppU0DwcO2l_aRNQyZ82533e06yt_uzLFA.webp?r=f77"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABb2PQCz8BzVFOrtT7Bhu-N_hIdjfdpR0voMG4kvq2J-ZCcAgB9Ze4HQcbPGMK5HL2l2b-XPnuuphYlVRtxjbvZH8kKQvfWMJnOV0TmkXytlz9nI6FwG7WQGgmhCR_UwxKyvWBJR4foTTcAaMvz8E7y-X8D0DfjcnNp446NmAviGov_aAY-FLxT9TXXVGZ6ZbI92mVXIK9c4IcZCR.webp?r=604"
+                            alt="" width="100%" height="100%"></a></li>
+                <li><a href="#"><img
+                            src="https://occ-0-4773-3663.1.nflxso.net/dnm/api/v6/-klpX4b1RECP-oGX3Uvz90PrgHE/AAAABfV7XTOSOhl6eCjB1DpCfZZ2LR94pPtH6N8UjdxPYinHcZnftde-ixgjkN6zPcdgTFO4LDLQWc2Ll2uLnbDea8tQnvi7J2_FK3ILf9-7UXvXsNL_N6EyPleNzLe9EIuVzAomHyLDdHZaJKlnQo8HYOF5skERiHK4m--eNSkDoUpGzLBT8dCWTm2F2NXznqSVxg2lQKSQSscauZRD.webp?r=5d5"
+                            alt="" width="100%" height="100%"></a></li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    <div class="more">
+        <h1>More reasons to join</h1>
+        <div class="join">
+        <div class="more1"><p>Stories tailored to your teste<p></div>
+        <div class="more1"><p>Cancel or switch plans anytime</p></div>
+        <div class="more1"><p>A place just for kids</p></div>
+        <div class="more1"><p>For your phone, tablet, laptop and Tv</p></div>
         </div>
     </div>
 
